--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -263,7 +263,7 @@
         <bool>true</bool>
        </property>
        <property name="columnCount">
-        <number>6</number>
+        <number>5</number>
        </property>
        <attribute name="horizontalHeaderCascadingSectionResizes">
         <bool>false</bool>
@@ -282,7 +282,7 @@
        </attribute>
        <column>
         <property name="text">
-         <string>Progress</string>
+         <string>Name</string>
         </property>
         <property name="textAlignment">
          <set>AlignCenter</set>
@@ -290,7 +290,7 @@
        </column>
        <column>
         <property name="text">
-         <string>Name</string>
+         <string>AI Model</string>
         </property>
         <property name="textAlignment">
          <set>AlignCenter</set>
@@ -306,23 +306,15 @@
        </column>
        <column>
         <property name="text">
+         <string>Progress</string>
+        </property>
+        <property name="textAlignment">
+         <set>AlignCenter</set>
+        </property>
+       </column>
+       <column>
+        <property name="text">
          <string>Created</string>
-        </property>
-        <property name="textAlignment">
-         <set>AlignCenter</set>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>ID</string>
-        </property>
-        <property name="textAlignment">
-         <set>AlignCenter</set>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>AI Model</string>
         </property>
         <property name="textAlignment">
          <set>AlignCenter</set>
@@ -579,7 +571,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>13</x>
