--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -56,7 +56,7 @@
     </size>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="processingsTab">
     <attribute name="title">
@@ -115,7 +115,7 @@
          </rect>
         </property>
         <property name="visible">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="styleSheet">
          <string notr="true"/>
@@ -247,7 +247,7 @@
          <height>165</height>
         </size>
        </property>
-       <widget class="QWidget" name="">
+       <widget class="QWidget" name="layoutWidget">
         <property name="geometry">
          <rect>
           <x>0</x>
@@ -683,9 +683,9 @@
       </property>
      </widget>
     </widget>
-    <widget class="QFrame" name="frame">
+    <widget class="QFrame" name="maxarFrame">
      <property name="enabled">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <property name="geometry">
       <rect>
@@ -913,8 +913,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>74</width>
-          <height>16</height>
+          <width>583</width>
+          <height>489</height>
          </rect>
         </property>
         <widget class="QLabel" name="label_4">
@@ -996,5 +996,22 @@
   <tabstop>ButWFS</tabstop>
  </tabstops>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>checkMaxar</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>maxarFrame</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>49</x>
+     <y>260</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>54</x>
+     <y>311</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
