--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>629</width>
+    <width>625</width>
     <height>559</height>
    </rect>
   </property>
@@ -56,7 +56,7 @@
     </size>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="processingsTab">
     <attribute name="title">
@@ -274,7 +274,7 @@
                 </widget>
                </item>
                <item row="0" column="1">
-                <widget class="QLineEdit" name="NewLayName">
+                <widget class="QLineEdit" name="processingName">
                  <property name="minimumSize">
                   <size>
                    <width>129</width>
@@ -369,7 +369,7 @@
               </layout>
              </item>
              <item>
-              <widget class="QCheckBox" name="checkUp">
+              <widget class="QCheckBox" name="updateCache">
                <property name="text">
                 <string>Update cache</string>
                </property>
@@ -391,7 +391,7 @@
             <number>140</number>
            </property>
            <item>
-            <widget class="QPushButton" name="ButtonUpload">
+            <widget class="QPushButton" name="startProcessing">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
@@ -650,7 +650,7 @@
        <string/>
       </property>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>14</x>
@@ -677,9 +677,6 @@
          </property>
          <property name="storageMode">
           <enum>QgsFileWidget::GetDirectory</enum>
-         </property>
-         <property name="options">
-          <set>QFileDialog::ReadOnly|QFileDialog::ShowDirsOnly</set>
          </property>
         </widget>
        </item>
