--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>625</width>
+    <width>807</width>
     <height>559</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -25,7 +25,7 @@
   <property name="maximumSize">
    <size>
     <width>807</width>
-    <height>607</height>
+    <height>800</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -39,12 +39,12 @@
     <rect>
      <x>10</x>
      <y>0</y>
-     <width>611</width>
+     <width>791</width>
      <height>551</height>
     </rect>
    </property>
    <property name="sizePolicy">
-    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
@@ -56,7 +56,7 @@
     </size>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="processingsTab">
     <attribute name="title">
@@ -89,7 +89,7 @@
          <height>0</height>
         </size>
        </property>
-       <widget class="QPushButton" name="ButtonDel">
+       <widget class="QPushButton" name="deleteProcessings">
         <property name="geometry">
          <rect>
           <x>11</x>
@@ -129,7 +129,7 @@
      <item row="2" column="0">
       <widget class="QTableWidget" name="processingsTable">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Minimum">
+        <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -143,7 +143,7 @@
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>300</height>
+         <height>500</height>
         </size>
        </property>
        <property name="baseSize">
@@ -161,8 +161,14 @@
        <property name="sizeAdjustPolicy">
         <enum>QAbstractScrollArea::AdjustIgnored</enum>
        </property>
+       <property name="autoScroll">
+        <bool>false</bool>
+       </property>
        <property name="editTriggers">
         <set>QAbstractItemView::NoEditTriggers</set>
+       </property>
+       <property name="showDropIndicator" stdset="0">
+        <bool>true</bool>
        </property>
        <property name="alternatingRowColors">
         <bool>true</bool>
@@ -174,7 +180,7 @@
         <bool>true</bool>
        </property>
        <property name="columnCount">
-        <number>5</number>
+        <number>6</number>
        </property>
        <attribute name="horizontalHeaderCascadingSectionResizes">
         <bool>false</bool>
@@ -226,6 +232,14 @@
        <column>
         <property name="text">
          <string>Created</string>
+        </property>
+        <property name="textAlignment">
+         <set>AlignCenter</set>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string notr="true">ID</string>
         </property>
         <property name="textAlignment">
          <set>AlignCenter</set>
@@ -356,12 +370,12 @@
                  </item>
                  <item>
                   <property name="text">
-                   <string>Custom (in settings)</string>
+                   <string>Open new .tif</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>Open new .tif</string>
+                   <string>Custom (in settings)</string>
                   </property>
                  </item>
                 </widget>
@@ -913,7 +927,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>583</width>
+          <width>763</width>
           <height>489</height>
          </rect>
         </property>
