Fix load processing results

--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -436,7 +436,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="ButtonDownload">
+            <widget class="QPushButton" name="loadProcessingResults">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
